Bug 160359 - kopete crash with icq
Summary: kopete crash with icq
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: ICQ and AIM Plugins (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-04 13:33 UTC by Pavel Volkovitskiy
Modified: 2008-10-17 10:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pavel Volkovitskiy 2008-04-04 13:33:34 UTC
Version:            (using KDE 4.0.3)
Installed from:    Compiled From Sources
OS:                Linux

Using host libthread_db library "/lib64/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread 0x2ba132eeb950 (LWP 15081)]
[New Thread 0x41001940 (LWP 15094)]
[New Thread 0x40800940 (LWP 15090)]
[KCrash handler]
#4  Connection::rootTask (this=0x0)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/connection.cpp:158
#5  0x00002ba13aace49b in Client::lt_loginFinished (this=0xa99fc0)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/client.cpp:396
#6  0x00002ba13aad5700 in Client::qt_metacall (this=0xa99fc0, 
    _c=QMetaObject::InvokeMetaMethod, _id=38, _a=0x7fff8415fc60)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/client.moc:213
#7  0x00002ba126c64e61 in QMetaObject::activate ()
   from /usr/lib64/libQtCore.so.4
#8  0x00002ba13ab2fcb0 in Task::done (this=0x98f4a0)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/tasks/task.cpp:205
#9  0x00002ba13ab323e6 in StageOneLoginTask::closeTaskFinished (this=0x98f4a0)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/tasks/logintask.cpp:80
#10 0x00002ba13ab346b8 in StageOneLoginTask::qt_metacall (this=0x98f4a0, 
    _c=QMetaObject::InvokeMetaMethod, _id=0, _a=<value optimized out>)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/logintask.moc:66
#11 0x00002ba126c64e61 in QMetaObject::activate ()
   from /usr/lib64/libQtCore.so.4
#12 0x00002ba13ab2fcb0 in Task::done (this=0xb5e830)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/tasks/task.cpp:205
#13 0x00002ba13ab3a7e6 in CloseConnectionTask::take (this=0xb5e830, 
    transfer=<value optimized out>)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/tasks/closeconnectiontask.cpp:71
#14 0x00002ba13ab2fa7a in Task::take (this=<value optimized out>, 
    transfer=0x1486b80)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/tasks/task.cpp:134
#15 0x00002ba13ab02d37 in Connection::distribute (this=<value optimized out>, 
    transfer=0x1486b80)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/connection.cpp:223
#16 0x00002ba13ab02f51 in Connection::qt_metacall (this=0xa783f0, 
    _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0x7fff84160920)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/connection.moc:82
#17 0x00002ba126c64e61 in QMetaObject::activate ()
   from /usr/lib64/libQtCore.so.4
#18 0x00002ba13aaeb18f in ClientStream::cp_incomingData (this=0xdba370)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/oscarclientstream.cpp:258
#19 0x00002ba13aaeb3fd in ClientStream::qt_metacall (this=0xdba370, 
    _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7fff84160e80)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/oscarclientstream.moc:83
#20 0x00002ba126c64e61 in QMetaObject::activate ()
   from /usr/lib64/libQtCore.so.4
#21 0x00002ba13aada433 in CoreProtocol::wireToTransfer (this=0x1a4d228, 
    wire=<value optimized out>)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/coreprotocol.cpp:221
#22 0x00002ba13aadab42 in CoreProtocol::addIncomingData (this=0x1a4d228, 
    incomingBytes=@0x7fff841615c0)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/coreprotocol.cpp:108
#23 0x00002ba13aae8801 in ClientStream::socketReadyRead (this=0xdba370)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/oscarclientstream.cpp:307
#24 0x00002ba13aaeb3bc in ClientStream::qt_metacall (this=0xdba370, 
    _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x7fff84161680)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/protocols/oscar/liboscar/oscarclientstream.moc:87
#25 0x00002ba126c64e61 in QMetaObject::activate ()
   from /usr/lib64/libQtCore.so.4
#26 0x00002ba12ba29ac8 in ?? () from /usr/lib64/libQtNetwork.so.4
#27 0x00002ba12ba1e4b1 in ?? () from /usr/lib64/libQtNetwork.so.4
#28 0x00002ba128169da3 in QApplicationPrivate::notify_helper ()
   from /usr/lib64/libQtGui.so.4
#29 0x00002ba12816d6b2 in QApplication::notify ()
   from /usr/lib64/libQtGui.so.4
#30 0x00002ba127781b9b in KApplication::notify (this=0x7fff84162200, 
    receiver=0x1dee180, event=0x7fff84161f40)
    at /usr/src/debug/kdelibs--kdelibs/kdeui/kernel/kapplication.cpp:314
#31 0x00002ba126c52eb0 in QCoreApplication::notifyInternal ()
   from /usr/lib64/libQtCore.so.4
#32 0x00002ba126c745c1 in ?? () from /usr/lib64/libQtCore.so.4
#33 0x00002ba12aeb0313 in g_main_context_dispatch ()
   from /usr/lib64/libglib-2.0.so.0
#34 0x00002ba12aeb3605 in ?? () from /usr/lib64/libglib-2.0.so.0
#35 0x00002ba12aeb3b3b in g_main_context_iteration ()
   from /usr/lib64/libglib-2.0.so.0
#36 0x00002ba126c73ce0 in QEventDispatcherGlib::processEvents ()
   from /usr/lib64/libQtCore.so.4
#37 0x00002ba1281dd7cf in ?? () from /usr/lib64/libQtGui.so.4
#38 0x00002ba126c52528 in QEventLoop::processEvents ()
   from /usr/lib64/libQtCore.so.4
#39 0x00002ba126c52646 in QEventLoop::exec () from /usr/lib64/libQtCore.so.4
#40 0x00002ba126c546d3 in QCoreApplication::exec ()
   from /usr/lib64/libQtCore.so.4
#41 0x0000000000444b16 in main (argc=3, argv=0x7fff84162fc8)
    at /usr/src/debug/kdenetwork--kdenetwork/kopete/kopete/main.cpp:102
#42 0x00002ba12a5268a4 in __libc_start_main () from /lib64/libc.so.6
#43 0x0000000000420109 in _start ()
Comment 1 Olivier Goffart 2008-04-23 01:13:40 UTC
Can you give more information about how to reproduce?
Comment 2 Pavel Volkovitskiy 2008-04-23 09:02:14 UTC
kopete was just running in background, i did nothing

so i don't know how to reproduce
Comment 3 Roman Jarosz 2008-10-15 23:21:53 UTC
*** Bug 165458 has been marked as a duplicate of this bug. ***
Comment 4 Roman Jarosz 2008-10-15 23:42:24 UTC
SVN commit 871882 by rjarosz:

Fix crash on login.
Set d->stage to StageTwo after stage one is finished and not on new connection because somehow d->stage could have been set to StageTwo while we were in StageOne stage.
Clear oscar client before connecting to server because we could start it more than once.

BUG: 160359



 M  +18 -4     client.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=871882
Comment 5 Roman Jarosz 2008-10-17 10:01:22 UTC
SVN commit 872433 by rjarosz:

Fix crash caused by my commit 871882, sorry!
The StageOne/Two tasks are already deleted when connection is closed.
Delete StageTwoTask right after the task has finished, so we don't leave it in memory till we close connection.

BUG: 172997
CCBUG: 160359



 M  +55 -62    client.cpp  
 M  +0 -5      client.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=872433