Fix crash on login. Set d->stage to StageTwo after stage one is finished and not on new connection because somehow d->stage could have been set to StageTwo while we were in StageOne stage. Clear oscar client before connecting to server because we could start it more than once.

BUG: 160359


svn path=/trunk/KDE/kdenetwork/kopete/; revision=871882